Bug 1559008.  Load catalog DTDs even if we don't have a useful DTD URI, since we ignore that URI anyway when we find a catalog DTD.  r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D34815

--HG--
extra : moz-landing-system : lando